--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rest-rant",
   "version": "1.0.0",
   "engines": {
-  "node": "18.0"
-   },
+    "node": "18.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.19.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
